--- a/SkLearn - Model Selection - Train_Test_Split.ipynb
+++ b/SkLearn - Model Selection - Train_Test_Split.ipynb
@@ -543,6 +543,70 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([[18, 19],\n",
+       "        [14, 15],\n",
+       "        [ 8,  9],\n",
+       "        [ 0,  1],\n",
+       "        [ 2,  3]]),\n",
+       " array([[10, 11],\n",
+       "        [12, 13],\n",
+       "        [ 6,  7],\n",
+       "        [ 4,  5],\n",
+       "        [16, 17]])]"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Split the Variable(Array/Range) into Train-Test Data as per Defined % = 50% and Defined shuffle value:True\n",
+    "\n",
+    "train_test_split(X, train_size=.50, shuffle = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([[ 0,  1],\n",
+       "        [ 2,  3],\n",
+       "        [ 4,  5],\n",
+       "        [ 6,  7],\n",
+       "        [ 8,  9],\n",
+       "        [10, 11],\n",
+       "        [12, 13],\n",
+       "        [14, 15]]),\n",
+       " array([[16, 17],\n",
+       "        [18, 19]]),\n",
+       " [0, 1, 2, 3, 4, 5, 6, 7],\n",
+       " [8, 9]]"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Split the Variable(Array/Range) into Train-Test Data as per Defined % = 50% and Defined shuffle value:True\n",
+    "\n",
+    "train_test_split(X,y, train_size=.80, shuffle = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
